Tried to fix identified issues.